--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/services/watchlist-service.js"></script>
+        <script src="scripts/directives/stk-watchlist-panel.js"></script>
         <!-- endbuild -->
 </body>
 </html>
